RESOLVED FIXED285760
REGRESSION (283135@main): Headings using `background-clip: text` become rectangles when exported as PDF
https://bugs.webkit.org/show_bug.cgi?id=285760
Summary REGRESSION (283135@main): Headings using `background-clip: text` become recta...
Simon Fraser (smfr)
Reported 2025-01-10 11:05:00 PST
The SourceIn compositing mode is not supported by printing.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-10 11:05:17 PST
Simon Fraser (smfr)
Comment 2 2025-01-10 11:05:33 PST
Simon Fraser (smfr)
Comment 3 2025-01-10 11:13:04 PST
EWS
Comment 4 2025-01-10 21:16:55 PST
Committed 288753@main (4d774bdad126): <https://commits.webkit.org/288753@main> Reviewed commits have been landed. Closing PR #38857 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.